--- a/styles.css
+++ b/styles.css
@@ -80,42 +80,22 @@ header p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    word-wrap: break-word;
+    word-wrap: break-word; /* Adresi sarmak için */
     overflow-wrap: break-word;
 }
 
 .token-address {
     word-wrap: break-word;
     overflow-wrap: break-word;
-    max-width: 100%;
+    max-width: 100%; /* Adresi sınırlar */
     font-size: 14px;
-    color: #8a2be2; /* Mor tonlarında */
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    border-bottom: 2px solid #8a2be2; /* Alt çizgi */
-    padding-bottom: 4px;
 }
 
 /* Token Description */
 .token-description {
     font-style: italic;
-    color: #b0b0b0;
-    background-color: #2c2c2c;
-    padding: 12px;
-    border-radius: 8px;
-    margin-top: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
-    font-size: 1.1em;
-}
-
-/* Chain */
-.token-info p:last-of-type {
-    color: #50c878; /* Yeşil renk (Chain için) */
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    padding-top: 8px;
+    color: #aaa;
+    margin-top: 20px;
 }
 
 /* Copy butonu */
@@ -181,10 +161,6 @@ header p {
     }
 
     .token-info p {
-        font-size: 1em; /* Küçük ekranlarda daha küçük font */
-    }
-
-    .token-description {
         font-size: 1em; /* Küçük ekranlarda daha küçük font */
     }
 }
